--- a/test-output/old/TestAll/methods.html
+++ b/test-output/old/TestAll/methods.html
@@ -1,36 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestAll</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8385ad">  <td>18/11/24 01:14:53</td>   <td>0</td> <td title="&gt;&gt;TestBase.suiteStart()[pri:0, instance:Railway.LoginTest@4e268090]">&gt;&gt;suiteStart</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="8385ad">  <td>18/11/24 01:14:53</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.LoginTest@4e268090]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="68717f">  <td>18/11/24 01:14:57</td>   <td>3826</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@4e268090]">TC01</td> 
-  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="68717f">  <td>18/11/24 01:14:58</td>   <td>4292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@4e268090]">TC02</td> 
-  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="68717f">  <td>18/11/24 01:14:58</td>   <td>4582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@4e268090]">TC03</td> 
-  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="68717f">  <td>18/11/24 01:14:58</td>   <td>4895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@4e268090]">TC04</td> 
-  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="68717f">  <td>18/11/24 01:14:58</td>   <td>4994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@4e268090]">TC05</td> 
-  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="68717f">  <td>18/11/24 01:14:59</td>   <td>6036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@4e268090]">TC06</td> 
-  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="68717f">  <td>18/11/24 01:15:00</td>   <td>6585</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC08()[pri:0, instance:Railway.LoginTest@4e268090]">TC08</td> 
-  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="68717f">  <td>18/11/24 01:15:00</td>   <td>6873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC09()[pri:0, instance:Railway.LoginTest@4e268090]">TC09</td> 
-  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="8385ad">  <td>18/11/24 01:15:01</td>   <td>7598</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.LoginTest@4e268090]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="8385ad">  <td>18/11/24 01:15:01</td>   <td>8159</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.RegisterTest@1bb266b3]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="79a8a8">  <td>18/11/24 01:15:05</td>   <td>11407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC07()[pri:0, instance:Railway.RegisterTest@1bb266b3]">TC07</td> 
-  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="79a8a8">  <td>18/11/24 01:15:07</td>   <td>14151</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC10()[pri:0, instance:Railway.RegisterTest@1bb266b3]">TC10</td> 
-  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="8385ad">  <td>18/11/24 01:15:07</td>   <td>14162</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.RegisterTest@1bb266b3]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="8385ad">  <td>18/11/24 01:15:08</td>   <td>14837</td> <td title="&lt;&lt;TestBase.suiteEnd()[pri:0, instance:Railway.LoginTest@4e268090]">&lt;&lt;suiteEnd</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1714550218</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/11/26 17:21:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.LoginTest@4ef37659]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2125062626</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/26 17:21:04</td>   <td>4285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC01()[pri:0, instance:Railway.LoginTest@4ef37659]">TC01</td> 
+  <td>main@2125062626</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/26 17:21:06</td>   <td>6362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC02()[pri:0, instance:Railway.LoginTest@4ef37659]">TC02</td> 
+  <td>main@2125062626</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/26 17:21:07</td>   <td>6804</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC03()[pri:0, instance:Railway.LoginTest@4ef37659]">TC03</td> 
+  <td>main@2125062626</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/26 17:21:07</td>   <td>7378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC04()[pri:0, instance:Railway.LoginTest@4ef37659]">TC04</td> 
+  <td>main@2125062626</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/26 17:21:07</td>   <td>7581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC05()[pri:0, instance:Railway.LoginTest@4ef37659]">TC05</td> 
+  <td>main@2125062626</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/26 17:21:09</td>   <td>9508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC06()[pri:0, instance:Railway.LoginTest@4ef37659]">TC06</td> 
+  <td>main@2125062626</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/26 17:21:10</td>   <td>10580</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC08()[pri:0, instance:Railway.LoginTest@4ef37659]">TC08</td> 
+  <td>main@2125062626</td>   <td></td> </tr>
+<tr bgcolor="88bd7e">  <td>18/11/26 17:21:11</td>   <td>11016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC09()[pri:0, instance:Railway.LoginTest@4ef37659]">TC09</td> 
+  <td>main@2125062626</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/11/26 17:21:12</td>   <td>12070</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.LoginTest@4ef37659]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2125062626</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/11/26 17:21:13</td>   <td>12741</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:Railway.RegisterTest@34f7cfd9]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2125062626</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>18/11/26 17:21:16</td>   <td>16398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC07()[pri:0, instance:Railway.RegisterTest@34f7cfd9]">TC07</td> 
+  <td>main@2125062626</td>   <td></td> </tr>
+<tr bgcolor="c78295">  <td>18/11/26 17:21:22</td>   <td>22302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.TC10()[pri:0, instance:Railway.RegisterTest@34f7cfd9]">TC10</td> 
+  <td>main@2125062626</td>   <td></td> </tr>
+<tr bgcolor="c7e463">  <td>18/11/26 17:21:23</td>   <td>22971</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterClass()[pri:0, instance:Railway.RegisterTest@34f7cfd9]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2125062626</td>   <td></td> </tr>
 </table>
